--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   web3modal_flutter: ^3.0.0
+  walletconnect_flutter_v2: ^2.1.8
+  get_it: ^7.6.0
+  logger: ^2.0.2+1
+  fl_toast: ^3.1.0
+  smooth_page_indicator: ^1.1.0
+  web3dart: ^2.6.1
+  universal_io: ^2.2.2
+  json_annotation: ^4.8.1
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
